@@ -1,3 +1,11 @@
+2007-08-16  Carlos Garcia Campos  <carlosgc@gnome.org>
+
+	* lib/egg/egg-toolbar-editor.c: (set_drag_cursor):
+	* lib/egg/egg-editable-toolbar.c: (configure_item_cursor),
+	(new_pixbuf_from_widget):
+
+	Fix multihead problems in toolbar editor.
+	
 2007-08-15  Diego Escalante Urrelo  <diegoe@gnome.org>
 
 	* embed/downloader-view.c:
